deployments/kubernetes/base-services/airbyte/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-webapp
  namespace: elt
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: airbyte.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-webapp-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-api
  namespace: elt
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: airbyte-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-server-svc
                port:
                  number: 8001
